--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,46 +1,81 @@
 <!-- Unfortunately you must restart storybook if you make changes in here :( -->
-
+<link
+  href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+  rel="stylesheet"
+/>
 <style>
-.code-block {
-    margin: 1em 0;
-}
-.code-block pre {
-    margin-bottom: .1em;
-}
-.code-block pre code {
+  * {
+    font-family: 'Roboto', sans-serif;
+  }
+
+  .placeholder {
+    margin: 1.5rem;
+    padding: 1rem;
+    border-radius: 5px 5px 5px 5px;
+    -moz-border-radius: 5px 5px 5px 5px;
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border: 1px dotted #cfcfcf;
+  }
+
+  .code-block {
+    margin: 1.5rem;
+  }
+
+  .code-block pre {
+    margin-bottom: 0.1em;
+  }
+  .code-block pre code {
     display: inline-block;
-    background-color: #eee;
-    border: 1px solid #bbb;
-    padding: .5em;
-    color: #555;
-}
-.code-block a {
-    color: #557799;
-    font-size: .8em;
+    color: #fff;
+    padding: 0.75rem;
+    background-color: #222;
+    white-space: pre;
+    text-shadow: 0 1px 0 #000;
+    border-radius: 5px;
+    border-bottom: 1px solid #555;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4) inset,
+      0 0 20px rgba(0, 0, 0, 0.2) inset;
+    font: 16px/24px 'Courier New', Courier, 'Lucida Sans Typewriter',
+      'Lucida Typewriter', monospace;
+    overflow-x: auto;
+  }
+  .code-block a {
+    font-size: 0.8em;
     cursor: pointer;
-}
+    background-color: Crimson;
+    border-radius: 5px;
+    color: white;
+    padding: 0.5em;
+    text-decoration: none;
+  }
+
+  .code-block a:hover {
+    background-color: FireBrick;
+    color: White;
+  }
 </style>
 
 <script>
-    window.addEventListener('DOMContentLoaded', () => {
-        // Selects code blocks when clicked
-        document.body.addEventListener('click', ({ target }) => {
-            if(target.matches('.select-code')) {
-                selectElementText(target.parentElement.querySelector('pre code'));
-            }
-        });
-        
-        function selectElementText(el) {
-            if (document.selection) { // IE
-                var range = document.body.createTextRange();
-                range.moveToElementText(el);
-                range.select();
-            } else if (window.getSelection) {
-                var range = document.createRange();
-                range.selectNode(el);
-                window.getSelection().removeAllRanges();
-                window.getSelection().addRange(range);
-            }
-        }
+  window.addEventListener('DOMContentLoaded', () => {
+    // Selects code blocks when clicked
+    document.body.addEventListener('click', ({ target }) => {
+      if (target.matches('.select-code')) {
+        selectElementText(target.parentElement.querySelector('pre code'));
+      }
     });
+
+    function selectElementText(el) {
+      if (document.selection) {
+        // IE
+        var range = document.body.createTextRange();
+        range.moveToElementText(el);
+        range.select();
+      } else if (window.getSelection) {
+        var range = document.createRange();
+        range.selectNode(el);
+        window.getSelection().removeAllRanges();
+        window.getSelection().addRange(range);
+      }
+    }
+  });
 </script>
